--- a/latest/index.html
+++ b/latest/index.html
@@ -1,7 +1,7 @@
 ---
 layout: nil
-description: All Clojure Intertweets, Archived
-title: The Clojure Intertweet Archive
+description: The Latest Clojure Intertweets
+title: The Latest Clojure Intertweets
 section: archive
 ---
 <!doctype html>
@@ -19,10 +19,10 @@ section: archive
       <div class="row">
         <div class="span8 offset2">
           <section id="news" 
-                   title="The Clojure Intertweet Archive">
+                   title="{{ page.title }}">
             <div class="page-header">
-              <h1>The Clojure Intertweet Archive</h1> </div>
-            {% for post in site.posts %}
+              <h1>{{ page.title }}</h1> </div>
+            {% for post in site.posts limit: 10 %}
             <div class="row">
               <h2 class="title"><a href="{{post.url}}">{{ post.title}}</a></h2>
               <div class="post_content">
@@ -30,8 +30,11 @@ section: archive
               </div>
             </div> <!-- row -->
             {% endfor %}
-            <div class="row archive-link"> 
-              <h2 class="pull-right"> <a href="/latest">Latest Intertweets &rarr;</a></h2></div>
+
+            <div class="row archive-link">
+              <h2><a href="/archive" title="Intertweet Archive">
+                  &larr; The Intertweet Archive </a> 
+                <a href="/" class="pull-right">Newest Intertweet &rarr;</a></h2></div>
           </section>
         </div>
         {% comment %} "push" is required for the sticky footer {% endcomment %}
