Add 'dynamic' navigation based on the page/post section

--- a/latest/index.html
+++ b/latest/index.html
@@ -2,7 +2,7 @@
 layout: nil
 description: The Latest Clojure Intertweets
 title: The Latest Clojure Intertweets
-section: archive
+section: latest
 ---
 <!doctype html>
 <html lang="en">
