--- a/latest/index.html
+++ b/latest/index.html
@@ -24,10 +24,28 @@ section: latest
               <h1>{{ page.title }}</h1> </div>
             {% for post in site.posts limit: 10 %}
             <div class="row">
+              {% if post.layout == 'legacy-post' %}
               <h2 class="title"><a href="{{post.url}}">{{ post.title}}</a></h2>
               <div class="post_content">
                 {{ post.content }}
               </div>
+              {% else %}
+              <h2 class="title">
+                <a href="{{post.url}}" 
+                   title="{{post.title}} &mdash; {{post.date | date: "%b %d"}}">
+                  {{post.title}}  &mdash; {{post.date | date: "%b %d"}}</a></h2>
+                  <div class="post_content">
+                    {{ post.content }}
+                    <dl>
+                      {% for it in post.intertweets %}
+                      <dt><a href="{{it.url}}">{{ it.tweet }}</a> 
+                        (via <a href="http://twitter.com/{{it.author}}">
+                          @{{it.author}}</a>)</dt>
+                      <dd>{{it.comment | markdownify }}</dd>
+                      {% endfor %}
+                    </dl>
+                  </div>
+                {% endif %}
             </div> <!-- row -->
             {% endfor %}
 
