Legacy posts should use the legacy layour in the home page. Small devices should not resize.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@ section: home
       
       <div class="row">
         <div class="span8 offset2">
+          {% if post.layout == 'legacy-post' %}
+          {% include legacy-post.html %}
+          {% else %}
           {% include post.html %}
+          {% endif %}
         </div>
       </div> <!-- post row -->
       
