Add sitemap.xml. Add priorities to pages. Disable pagination.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: nil
 description: Disclojure posts daily summaries of selected development
    topics.
 section: home
+priority: 1
 ---
 <!doctype html>
 <html lang="en">
