--- a/latest/index.html
+++ b/latest/index.html
@@ -3,6 +3,7 @@ layout: nil
 description: The Latest Clojure Intertweets
 title: The Latest Clojure Intertweets
 section: latest
+priority: 0.9
 ---
 <!doctype html>
 <html lang="en">
