XML escape the titles

--- a/feed/rss/index.html
+++ b/feed/rss/index.html
@@ -15,7 +15,7 @@ noindex: true
     
     {% for post in site.posts limit: 30 %}
     <item>
-      <title>{{ post.title }}</title>
+      <title>{{ post.title | xml_escape }}</title>
       <link>http://{{site.domain}}{{ post.url }}</link>
       <pubDate>{{ post.date | date: "%a, %d %b %Y %H:%M:%S %z" }}</pubDate>
       <author>{{ post.author }}</author>
@@ -25,7 +25,7 @@ noindex: true
         {{ post.content }}
         {% else %}
           {% capture content %}
-          {{ post.content }}
+          {{ post.content | xml_escape}}
         <ul>
           {% for it in post.intertweets %}
           <li><a href="{{it.url}}">{{ it.tweet }}</a> 
